force-app/main/default/objects/Unit__c/fields/AOS_Authority_Person__c.field-meta.xml
<CustomField>
    <fullName>AOS_Authority_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AOS Authority Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plots</relationshipName>
    <type>Lookup</type>
</CustomField>