force-app/main/default/objects/Unit__c/fields/Base_Price_per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_per_Sq_Ft__c</fullName>
    <label>Base Price per Sq. Yard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>