force-app/main/default/objects/Unit__c/fields/Collected__c.field-meta.xml
<CustomField>
    <fullName>Collected__c</fullName>
    <label>Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>