force-app/main/default/objects/Unit__c/fields/Concern__c.field-meta.xml
<CustomField>
    <fullName>Concern__c</fullName>
    <label>Concern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>