force-app/main/default/objects/Unit__c/fields/East__c.field-meta.xml
<CustomField>
    <fullName>East__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>East</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Plots (East)</relationshipLabel>
    <relationshipName>East_Plots</relationshipName>
    <type>Lookup</type>
</CustomField>