force-app/main/default/objects/Unit__c/fields/Flat_Number__c.field-meta.xml
<CustomField>
    <fullName>Flat_Number__c</fullName>
    <label>Flat Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>