force-app/main/default/objects/Unit__c/fields/Mortgage_Under__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Under__c</fullName>
    <label>Mortgage Under</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Piramal</fullName>
            </value>
            <value>
                <fullName>Hindhuja</fullName>
            </value>
            <value>
                <fullName>Epitome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>