force-app/main/default/objects/Unit__c/fields/North__c.field-meta.xml
<CustomField>
    <fullName>North__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>North</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Plots</relationshipLabel>
    <relationshipName>North_Plots</relationshipName>
    <type>Lookup</type>
</CustomField>