force-app/main/default/objects/Unit__c/fields/Out_Standing__c.field-meta.xml
<CustomField>
    <fullName>Out_Standing__c</fullName>
    <label>Out Standing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>