force-app/main/default/objects/Unit__c/fields/Plot_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Plot_Dimension__c</fullName>
    <label>Plot Dimension</label>
    <length>100</length>
    <type>Text</type>
</CustomField>