force-app/main/default/objects/Unit__c/fields/Plot_Price__c.field-meta.xml
<CustomField>
    <fullName>Plot_Price__c</fullName>
    <label>Final Plot Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>