force-app/main/default/objects/Unit__c/fields/Plot_Size__c.field-meta.xml
<CustomField>
    <fullName>Plot_Size__c</fullName>
    <label>Plot Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>