force-app/main/default/objects/Unit__c/fields/Register_Date__c.field-meta.xml
<CustomField>
    <fullName>Register_Date__c</fullName>
    <label>Register Date</label>
    <type>Date</type>
</CustomField>