force-app/main/default/objects/Unit__c/fields/Sales_Deed_Authority_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Deed_Authority_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Deed Authority Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plots2</relationshipName>
    <type>Lookup</type>
</CustomField>