force-app/main/default/objects/Unit__c/fields/South__c.field-meta.xml
<CustomField>
    <fullName>South__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>South</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Plots (South)</relationshipLabel>
    <relationshipName>South_Plots</relationshipName>
    <type>Lookup</type>
</CustomField>