force-app/main/default/objects/Unit__c/fields/Survey_Number__c.field-meta.xml
<CustomField>
    <fullName>Survey_Number__c</fullName>
    <label>Survey Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>