force-app/main/default/objects/Unit__c/fields/Unique_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Request_Number__c</fullName>
    <label>Unique Request Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>