force-app/main/default/objects/Unit__c/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <label>Plot Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>