force-app/main/default/objects/Unit__c/fields/UPI_QR_Image__c.field-meta.xml
<CustomField>
    <fullName>UPI_QR_Image__c</fullName>
    <label>UPI QR Image</label>
    <type>Url</type>
</CustomField>