force-app/main/default/objects/Unit__c/fields/UPI_QR_PDF__c.field-meta.xml
<CustomField>
    <fullName>UPI_QR_PDF__c</fullName>
    <label>UPI QR PDF</label>
    <type>Url</type>
</CustomField>