force-app/main/default/objects/Unit__c/fields/Virtual_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account_Id__c</fullName>
    <label>Virtual Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>