force-app/main/default/objects/Unit__c/fields/Virtual_Account_IFSC__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account_IFSC__c</fullName>
    <label>Virtual Account IFSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>