force-app/main/default/objects/Unit__c/fields/Visited_Status__c.field-meta.xml
<CustomField>
    <fullName>Visited_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visited Status</label>
    <type>Checkbox</type>
</CustomField>