force-app/main/default/objects/Unit__c/fields/West__c.field-meta.xml
<CustomField>
    <fullName>West__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>West</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Plots (West)</relationshipLabel>
    <relationshipName>West_Plots</relationshipName>
    <type>Lookup</type>
</CustomField>